Replace old Xamarin.Firebase.iOS.CloudMessaging with AdamE.Firebase.iOS.CloudMessaging package

--- a/Plugin.FirebasePushNotification/Plugin.FirebasePushNotification.csproj
+++ b/Plugin.FirebasePushNotification/Plugin.FirebasePushNotification.csproj
@@ -66,8 +66,9 @@
     <Compile Include="Platforms\Ios\**\*.cs" />
     <Compile Include="Platforms\Xamarin\**\*.cs" />
     <Compile Include="**\*.ios.cs" />
-    <Compile Include="**\*.ios.*.cs" />
-    <PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging" Version="4.3.0" />
+    <Compile Include="**\*.ios.*.cs" />   
+    <!--<PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging" Version="4.3.0" />-->
+    <PackageReference Include="AdamE.Firebase.iOS.CloudMessaging" Version="10.16.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" $(TargetFramework.StartsWith('xamarin.mac')) ">
